# RectsToGridConverter

./: .travis.yml  CMakeLists.txt  Converter.pro  README.md  bresenham.h  filler.cpp  filler.h  gl.const.h  main.cpp  map.cpp  map.h  parser.h  point.h  polygonoffset.cpp  polygonoffset.h
samples/: 1.xml  2.xml  3.xml  Berlin_0.xml  Moscow_0.xml  Moscow_0_256.xml  ex_triangle.xml  example.xml  example1.xml
